@@ -210,9 +210,9 @@ warn_about_unrecognized_names = true
 ;   none: No units will ever retreat
 ;   all-units: All units may retreat, even if they have only one move or are up against a faster opponent
 ;   if-faster: Units may retreat when they are faster than their opponent, for example a cavalry may retreat from a knight
-; This setting doesn't change the fact that units cannot retreat when they start combat with 1 HP or are defending a city, and only applies to combat
-; on land.
-retreat_rules = standard
+; These settings don't change the fact that units cannot retreat when they start combat with 1 HP or are defending a city
+land_retreat_rules = standard
+sea_retreat_rules = standard
 
 ; When starting a new game, each AI player will be given two starting cities. The first will be their normal capital at their normal starting
 ; location, and the other will be a secondary capital at a secondary starting location. The secondary capital will contain the forbidden palace and
